Closed
Bug 472252
Opened 17 years ago
Closed 17 years ago
Textarea drops below floated block
Categories
(Core :: Layout, defect, P1)
Core
Layout
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b3
People
(Reporter: phiw2, Assigned: dbaron)
References
()
Details
(Keywords: fixed1.9.1, regression, testcase)
Attachments
(2 files)
|
478 bytes,
text/html
|
Details | |
|
9.15 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
The 'reply' textarea in the mozillazine forums drops below the floated block containing the 'smilies' samples.
The textarea on those pages has a width:100% declared, which makes it 2px wider than the parent block (due to the border of the textarea).
regressed:
Fails:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090104 Minefield/3.2a1pre (tinderbox hourly build, 17:42)
http://hg.mozilla.org/mozilla-central/rev/496e0cb5c943
Works
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090104 Minefield/3.2a1pre
http://hg.mozilla.org/mozilla-central/rev/9f497b1505d2
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=9f497b1505d2&tochange=496e0cb5c943
--> 191448
| Assignee | ||
Comment 1•17 years ago
|
||
I wrote a bunch of tests (layout/reftests/floats/other-float-outside-*) to test issues related to this type of situation, but it seems they weren't sufficient.
I suppose they all test it based on the mBandHasFloats checks in nsBlockReflowState::CanPlaceFloat, and this case is related to the mBandHasFloats check in nsBlockReflowState::ClearFloats.
I'll investigate further...
| Assignee | ||
Comment 2•17 years ago
|
||
It turns out those tests weren't doing what I thought they were because I had a ":" where I should have had a ";". (That actually fits; the result surprised me, but I just implemented it anyway.)
| Assignee | ||
Comment 3•17 years ago
|
||
Fixes my bad tests, adds attachment 355507 [details] to reftest, and fixes nsFloatManager to be compatible with nsSpaceManager (although not necessarily correct, but I think compatible with other browsers).
Full reftests pass.
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Attachment #355666 -
Flags: superreview?(roc)
Attachment #355666 -
Flags: review?(roc)
| Assignee | ||
Updated•17 years ago
|
Priority: -- → P1
Target Milestone: --- → mozilla1.9.2a1
Attachment #355666 -
Flags: superreview?(roc)
Attachment #355666 -
Flags: superreview+
Attachment #355666 -
Flags: review?(roc)
Attachment #355666 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 5•17 years ago
|
||
verified with
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090107 Minefield/3.2a1pre
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2a1pre) Gecko/20090107 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 6•17 years ago
|
||
Landed on 1.9.1 along with the patch that caused the regression:
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/796feafea6b8
Keywords: fixed1.9.1
Target Milestone: mozilla1.9.2a1 → mozilla1.9.1b3
Updated•17 years ago
|
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.12+
Updated•16 years ago
|
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.12+
You need to log in
before you can comment on or make changes to this bug.
Description
•